tweaked divs to align sidnav with main div to avoid image overlaps. needs to allow main to scroll content.

--- a/styling.css
+++ b/styling.css
@@ -1,3 +1,8 @@
+*{
+    clear:both;
+    box-sizing: border-box;
+}
+
 .mc{
     image-rendering: crisp-edges;
     background-size: 64px;
@@ -662,11 +667,7 @@
 .SporeBlossom{
     background-image: url('images/minecraft textures/block/spore_blossom.png');
 }
-body {
-    background-color: #FDAD77 ;
-    display: flex;
-    flex-direction: row;
-}
+
 .tradername{
     font-size: xx-large;
     border: 4px solid black;
@@ -681,10 +682,16 @@ th{
 }
 .tablewrapper{
     height: 600px;
+    min-width: 10%;
+    max-width: fit-content;
+    width: fit-content;
     /* overflow: auto; */
     overflow-y: auto;
 }
 
+Table{
+    width: 100%;
+}
 
 .florists, .oldfishers{
     display: inline-flex;
@@ -746,27 +753,49 @@ th{
 }
 html{
     scroll-behavior: smooth;
+    width: 100%;
+    height: 100%;
+    
+}
+body {
+    background-color: #FDAD77 ;
+    width: 100%;
+    height: 100%;
+    display: inline-flex;
+    /* flex-direction: column; */
+    /* justify-content: left; */
+    clear: both;
+    /* overflow-x:hidden ; i dont like the x scroll */
+    overflow: hidden;
 }
 .main{
     /* background-color: darkslateblue; */
     padding: 10px;
-    display: flex;
+    height: max-content;
+    /* display: flex; */
+    display: inline-flex;
     margin: 0 auto;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     width: max-content;
+    overflow-y: scroll;
+    /* margin-left: 20%; */
     /* height: max-content; */
+    /* max-width: max-content; */
 }
 #sidenav {
     height: 100%;
-    width: 200px;
-    position: fixed;
+    /* width: 200px; */
+    max-width: max-content;
+    /* position: fixed; */
+    /* display: inline-flex; */
+    /* flex-direction: column; */
     z-index: 1;
     left: 0;
     top: 0;
     background-color: black;
     overflow: auto;
     padding-top: 20px;
-    padding-bottom: 20px;
+    padding-bottom: 40px;
 }
 #sidenav a{
     padding: 6px 8px 6px 16px;
